@startuml
' Define class styles
skinparam class {
    BackgroundColor<<entity>> Wheat
    BackgroundColor<<controller>> LightSkyBlue
    BackgroundColor<<service>> LightGreen
    BackgroundColor<<repository>> LightCoral
    BackgroundColor<<mapper>> Khaki
}

' CustomerAccountController
class "<<controller>>\nCustomerAccountController" as controller {

}

' CustomerAccountService interface
interface "CustomerAccountService" as service {

}

' CustomerAccountServiceImpl class
class "<<service>>\nCustomerAccountServiceImpl" as serviceImpl {
    - customerAccountRepository : CustomerAccountRepository
    - customerAccountResponseMapper : CustomerAccountResponseMapper
    - customerAccountRequestMapper : CustomerAccountRequestMapper
}
serviceImpl .up.|> service

' CustomerAccountRepository interface (assuming existence)
interface "<<repository>>\nCustomerAccountRepository" as repository {

}

' CustomerAccountResponseMapper class (assuming existence)
class "<<mapper>>\nCustomerAccountResponseMapper" as responseMapper {
}

' CustomerAccount class
class "<<entity>>\nCustomerAccount" as customerAccount {
    - id : Integer
    - customerAccountIdentifier : CustomerAccountIdentifier
    - customerFirstName : String
    - customerLastName : String
    - customerEmail : String
    - customerPhoneNumber : String
    - customerPassword : String
}

' CustomerAccountIdentifier class
class "CustomerAccountIdentifier" as accountIdentifier {
    - customerAccountId : String

}

' Relationships
controller --> customerAccount
controller -->  service
serviceImpl --> repository : uses
serviceImpl --> responseMapper : uses
customerAccount --> accountIdentifier : contains

@enduml